[package]
name = "las-crs"
version = "1.0.0"
edition = "2024"
authors = ["Øyvind Hjermstad <@yvind>"]
documentation = "https://docs.rs/las-crs"
description = "Get the CRS as an EPSG code from a las::Header"
homepage = "https://github.com/yvind/las-crs"
repository = "https://github.com/yvind/las-crs"
readme = "README.md"
license = "MIT"
keywords = ["lidar", "crs", "epsg", "gis"]

[dependencies]
las = "0.9.8"
log = "0.4"
thiserror = "2.0"

[dev-dependencies]
las = { version = "0.9.8", features = ["laz"] }